--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <h2>Lodní Logger (Netlify)</h2>
 
+    <p>Version: 0.01https://github.com/LudekSafar/Ship_Inclines.git</p>
+
     <div class="box">
       <div>G-Force: <span id="gVal" class="val">0.00</span></div>
       <div style="margin-top:10px">
