--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 
     <h2>Lodní Logger (Netlify)</h2>
 
+    <p>Verze: 0.1</p>
+
     <div class="box">
       <div>G-Force: <span id="gVal" class="val">0.00</span></div>
-      <div style="margin-top:10px">
+      <div style="margin-top:10px" class="val">
         X: <span class="val" id="betaVal">0</span>° | Y: <span class="val" id="gammaVal">0</span>°
       </div>
     </div>
