--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   </head>
   <body>
 
-    <h2>Logger + MAX (v3.1 Split)</h2>
+    <h2>Logger + MAX (v3.5)</h2>
+    <div id="backend-version" style="font-size: 0.8em; color: #555; margin-bottom: 10px;">
+      Verze serveru: <span style="color: orange;">Ověřuji...</span>
+    </div>
 
     <div class="box">
       <div class="label">G-Force (Aktuální / Minutové MAX)</div>
